--- a/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/embeddings.mdx
@@ -84,12 +84,6 @@ Embeddings
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-embeddings_v1_embeddings_post+code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post+code-samples+typescript">
 
 TypeScript
@@ -162,6 +156,40 @@ with Mistral(
 
 </OperationCodeSamplesSection>
 
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-embeddings_v1_embeddings_post+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
 <OperationRequestBodySection slot="request-body">
 
 <Section>
@@ -189,27 +217,6 @@ description: My awesome description
 </DebugPlaceholder>
 
 </OperationRequestBodyDescriptionSection>
-
-<OperationRequestBodyExamplesSection slot="request-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationRequestBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -462,6 +469,70 @@ defaultValue: MyDefaultValue
 
 </OperationRequestBodySection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-embeddings_v1_embeddings_post+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-embeddings_v1_embeddings_post+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-embeddings_v1_embeddings_post+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -491,27 +562,6 @@ defaultValue: MyDefaultValue
 Successful Response
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
