--- a/examples/docusaurus/mistral/docs/api/endpoint/models.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/models.mdx
@@ -87,12 +87,6 @@ List all models available to the user.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-list_models_v1_models_get+code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-list_models_v1_models_get+code-samples+typescript">
 
 TypeScript
@@ -153,6 +147,70 @@ with Mistral(
 
 </OperationCodeSamplesSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-list_models_v1_models_get+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-list_models_v1_models_get+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-list_models_v1_models_get+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-list_models_v1_models_get+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -182,27 +240,6 @@ with Mistral(
 Successful Response
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -2972,12 +3009,6 @@ Retrieve a model information.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-retrieve_model_v1_models_model_id_get+code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-retrieve_model_v1_models_model_id_get+code-samples+typescript"
@@ -3102,6 +3133,70 @@ The ID of the model to retrieve.
 
 </OperationParametersSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-retrieve_model_v1_models_model_id_get+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-retrieve_model_v1_models_model_id_get+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-retrieve_model_v1_models_model_id_get+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-retrieve_model_v1_models_model_id_get+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -3139,27 +3234,6 @@ The ID of the model to retrieve.
 Successful Response
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -5799,12 +5873,6 @@ Delete a fine-tuned model.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-delete_model_v1_models_model_id_delete+code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-delete_model_v1_models_model_id_delete+code-samples+typescript"
@@ -5929,6 +5997,70 @@ The ID of the model to delete.
 
 </OperationParametersSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-delete_model_v1_models_model_id_delete+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-delete_model_v1_models_model_id_delete+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-delete_model_v1_models_model_id_delete+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-delete_model_v1_models_model_id_delete+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -5958,27 +6090,6 @@ The ID of the model to delete.
 Successful Response
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -6153,12 +6264,6 @@ Update a model name or description.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+code-samples+typescript"
@@ -6284,6 +6389,40 @@ The ID of the model to update.
 
 </OperationParametersSection>
 
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
 <OperationRequestBodySection slot="request-body">
 
 <Section>
@@ -6311,27 +6450,6 @@ description: My awesome description
 </DebugPlaceholder>
 
 </OperationRequestBodyDescriptionSection>
-
-<OperationRequestBodyExamplesSection slot="request-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationRequestBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -6477,6 +6595,70 @@ defaultValue: MyDefaultValue
 
 </OperationRequestBodySection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -6514,27 +6696,6 @@ defaultValue: MyDefaultValue
 OK
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -9560,12 +9721,6 @@ Archive a fine-tuned model.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+code-samples+typescript"
@@ -9690,6 +9845,70 @@ The ID of the model to archive.
 
 </OperationParametersSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -9719,27 +9938,6 @@ The ID of the model to archive.
 OK
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -9958,12 +10156,6 @@ Un-archive a fine-tuned model.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+code-samples+typescript"
@@ -10088,6 +10280,70 @@ The ID of the model to unarchive.
 
 </OperationParametersSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -10117,27 +10373,6 @@ The ID of the model to unarchive.
 OK
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
