--- a/examples/custom/mistral/src/app/api/page.mdx
+++ b/examples/custom/mistral/src/app/api/page.mdx
@@ -18,6 +18,7 @@ import {
   OperationDescriptionSection,
   OperationParametersSection,
   OperationRequestBodyDescriptionSection,
+  OperationRequestBodyExamplesSection,
   OperationRequestBodySection,
   OperationResponseBodyDescriptionSection,
   OperationResponseBodyDisplayTypeSection,
@@ -70,12 +71,6 @@ Given an agent retrieve an agent entity with its attributes.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_agents_get_code-samples\}
-
-</SectionTitle>
 
 <SectionTab slot="tab" id="operation-agents_api_v1_agents_get_code-samples_typescript">
 
@@ -1379,12 +1374,6 @@ Update an agent attributes and create a new version.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_agents_update_code-samples\}
-
-</SectionTitle>
 
 <SectionTab slot="tab" id="operation-agents_api_v1_agents_update_code-samples_typescript">
 
@@ -3750,12 +3739,6 @@ Switch the version of an agent.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_agents_update_version_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-agents_api_v1_agents_update_version_code-samples_typescript"
@@ -5087,12 +5070,6 @@ Agents Completion
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_completion_v1_agents_completions_post_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -8775,12 +8752,6 @@ Mistral AI provides the ability to stream responses back to a client in order to
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-stream_agents_code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-stream_agents_code-samples_typescript">
 
 TypeScript
@@ -12423,12 +12394,6 @@ Retrieve a list of agent entities sorted by creation time.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_agents_list_code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-agents_api_v1_agents_list_code-samples_typescript">
 
 TypeScript
@@ -13791,12 +13756,6 @@ Create a new agent giving it instructions, tools, description. The agent is then
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_agents_create_code-samples\}
-
-</SectionTitle>
 
 <SectionTab slot="tab" id="operation-agents_api_v1_agents_create_code-samples_typescript">
 
@@ -16118,12 +16077,6 @@ Request the cancellation of a batch job.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_batch_cancel_batch_job_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_batch_cancel_batch_job_code-samples_typescript"
@@ -16689,12 +16642,6 @@ Get a batch job details by its UUID.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_batch_get_batch_job_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_batch_get_batch_job_code-samples_typescript"
@@ -17259,12 +17206,6 @@ Get a list of batch jobs for your organization and user.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_batch_get_batch_jobs_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -17886,12 +17827,6 @@ Create a new batch job, it will be queued for processing.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_batch_create_batch_job_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -18531,12 +18466,6 @@ Chat Classifications
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-chat_classifications_v1_chat_classifications_post_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -20591,12 +20520,6 @@ Chat Completion
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-chat_completion_v1_chat_completions_post_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -24355,12 +24278,6 @@ Mistral AI provides the ability to stream responses back to a client in order to
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-stream_chat_code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-stream_chat_code-samples_typescript">
 
 TypeScript
@@ -28073,12 +27990,6 @@ Chat Moderations
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-chat_moderations_v1_chat_moderations_post_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-chat_moderations_v1_chat_moderations_post_code-samples_typescript"
@@ -30114,12 +30025,6 @@ Classifications
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-classifications_v1_classifications_post_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-classifications_v1_classifications_post_code-samples_typescript"
@@ -30442,12 +30347,6 @@ Given a conversation_id retrieve a conversation entity with its attributes.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_get_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -31921,12 +31820,6 @@ Given a conversation_id retrieve all the entries belonging to that conversation.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_history_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -34219,12 +34112,6 @@ Given a conversation_id retrieve all the messages belonging to that conversation
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_messages_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-agents_api_v1_conversations_messages_code-samples_typescript"
@@ -35794,12 +35681,6 @@ Run completion on the history of the conversation and the user entries. Return t
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_append_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -38899,12 +38780,6 @@ Given a conversation_id and an id, recreate a conversation from this point and r
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_restart_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-agents_api_v1_conversations_restart_code-samples_typescript"
@@ -41997,12 +41872,6 @@ Given a conversation_id and an id, recreate a conversation from this point and r
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_restart_stream_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -45578,12 +45447,6 @@ Run completion on the history of the conversation and the user entries. Return t
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_append_stream_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-agents_api_v1_conversations_append_stream_code-samples_typescript"
@@ -49113,12 +48976,6 @@ Retrieve a list of conversation entities sorted by creation time.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_list_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-agents_api_v1_conversations_list_code-samples_typescript"
@@ -50612,12 +50469,6 @@ Create a new conversation, using a base model or an agent and append entries. Co
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_start_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-agents_api_v1_conversations_start_code-samples_typescript"
@@ -50643,6 +50494,7 @@ const mistral = new Mistral({
 async function run() {
   const result = await mistral.beta.conversations.start({
     inputs: "<value>",
+    model: "mistral",
   });
 
   // Handle the result
@@ -50675,7 +50527,7 @@ with Mistral(
     api_key="<YOUR_BEARER_TOKEN_HERE>",
 ) as mistral:
 
-    res = mistral.beta.conversations.start(inputs="<value>")
+    res = mistral.beta.conversations.start(inputs="<value>", model="mistral")
 
     # Handle response
     print(res)
@@ -50688,6 +50540,31 @@ with Mistral(
 </TabbedSection>
 
 </OperationCodeSamplesSection>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Example \{#operation-agents_api_v1_conversations_start_request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+```json
+{
+  "model": "mistral",
+  "messages": []
+}
+```
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
 
 <OperationRequestBodySection slot="request-body">
 
@@ -54150,12 +54027,6 @@ Create a new conversation, using a base model or an agent and append entries. Co
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-agents_api_v1_conversations_start_stream_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -58186,12 +58057,6 @@ Embeddings
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-embeddings_v1_embeddings_post_code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post_code-samples_typescript">
 
 TypeScript
@@ -58780,12 +58645,6 @@ Download a file
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_download_file_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-files_api_routes_download_file_code-samples_typescript"
@@ -58974,12 +58833,6 @@ Delete a file.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_delete_file_code-samples\}
-
-</SectionTitle>
 
 <SectionTab slot="tab" id="operation-files_api_routes_delete_file_code-samples_typescript">
 
@@ -59257,12 +59110,6 @@ Returns information about a specific file.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_retrieve_file_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -59699,12 +59546,6 @@ Get Signed Url
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_get_signed_url_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-files_api_routes_get_signed_url_code-samples_typescript"
@@ -59931,12 +59772,6 @@ Returns a list of files that belong to the user's organization.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_list_files_code-samples\}
-
-</SectionTitle>
 
 <SectionTab slot="tab" id="operation-files_api_routes_list_files_code-samples_typescript">
 
@@ -60400,12 +60235,6 @@ Please contact us if you need to increase these storage limits.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_upload_file_code-samples\}
-
-</SectionTitle>
 
 <SectionTab slot="tab" id="operation-files_api_routes_upload_file_code-samples_typescript">
 
@@ -60932,12 +60761,6 @@ FIM completion.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-fim_completion_v1_fim_completions_post_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -62366,12 +62189,6 @@ Mistral AI provides the ability to stream responses back to a client in order to
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-stream_fim_code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-stream_fim_code-samples_typescript">
 
 TypeScript
@@ -63759,12 +63576,6 @@ Request the cancellation of a fine tuning job.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -66499,12 +66310,6 @@ Get a fine-tuned job details by its UUID.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job_code-samples_typescript"
@@ -69238,12 +69043,6 @@ Request the start of a validated fine tuning job.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job_code-samples_typescript"
@@ -71971,12 +71770,6 @@ Get a list of fine-tuning jobs for your organization and user.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_code-samples_typescript"
@@ -74007,12 +73800,6 @@ Create a new fine-tuning job, it will be queued for processing.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -77366,12 +77153,6 @@ Un-archive a fine-tuned model.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model_code-samples_typescript"
@@ -77628,12 +77409,6 @@ Archive a fine-tuned model.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model_code-samples_typescript"
@@ -77889,12 +77664,6 @@ Update a model name or description.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -79143,12 +78912,6 @@ Delete a fine-tuned model.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-delete_model_v1_models_model_id_delete_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-delete_model_v1_models_model_id_delete_code-samples_typescript"
@@ -79442,12 +79205,6 @@ Retrieve a model information.
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-retrieve_model_v1_models_model_id_get_code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -80560,12 +80317,6 @@ List all models available to the user.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-list_models_v1_models_get_code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-list_models_v1_models_get_code-samples_typescript">
 
 TypeScript
@@ -81647,12 +81398,6 @@ Moderations
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-moderations_v1_moderations_post_code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-moderations_v1_moderations_post_code-samples_typescript"
@@ -81999,12 +81744,6 @@ OCR
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-ocr_v1_ocr_post_code-samples\}
-
-</SectionTitle>
 
 <SectionTab slot="tab" id="operation-ocr_v1_ocr_post_code-samples_typescript">
 
