--- a/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
@@ -87,12 +87,6 @@ Returns a list of files that belong to the user's organization.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_list_files+code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-files_api_routes_list_files+code-samples+typescript">
 
 TypeScript
@@ -156,6 +150,70 @@ with Mistral(
 
 </OperationCodeSamplesSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-files_api_routes_list_files+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-files_api_routes_list_files+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-files_api_routes_list_files+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-files_api_routes_list_files+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -185,27 +243,6 @@ with Mistral(
 OK
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -1049,12 +1086,6 @@ Please contact us if you need to increase these storage limits.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_upload_file+code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-files_api_routes_upload_file+code-samples+typescript">
 
 TypeScript
@@ -1124,6 +1155,40 @@ with Mistral(
 
 </OperationCodeSamplesSection>
 
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-files_api_routes_upload_file+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
 <OperationRequestBodySection slot="request-body">
 
 <Section>
@@ -1151,27 +1216,6 @@ description: My awesome description
 </DebugPlaceholder>
 
 </OperationRequestBodyDescriptionSection>
-
-<OperationRequestBodyExamplesSection slot="request-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationRequestBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -1523,6 +1567,70 @@ defaultValue: MyDefaultValue
 
 </OperationRequestBodySection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-files_api_routes_upload_file+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-files_api_routes_upload_file+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-files_api_routes_upload_file+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-files_api_routes_upload_file+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -1552,27 +1660,6 @@ defaultValue: MyDefaultValue
 OK
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -2128,12 +2215,6 @@ Returns information about a specific file.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_retrieve_file+code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-files_api_routes_retrieve_file+code-samples+typescript"
@@ -2265,6 +2346,70 @@ description: My awesome description
 
 </OperationParametersSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-files_api_routes_retrieve_file+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-files_api_routes_retrieve_file+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-files_api_routes_retrieve_file+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-files_api_routes_retrieve_file+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -2294,27 +2439,6 @@ description: My awesome description
 OK
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -2937,12 +3061,6 @@ Delete a file.
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_delete_file+code-samples\}
-
-</SectionTitle>
-
 <SectionTab slot="tab" id="operation-files_api_routes_delete_file+code-samples+typescript">
 
 TypeScript
@@ -3068,6 +3186,70 @@ description: My awesome description
 
 </OperationParametersSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-files_api_routes_delete_file+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-files_api_routes_delete_file+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-files_api_routes_delete_file+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-files_api_routes_delete_file+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -3097,27 +3279,6 @@ description: My awesome description
 OK
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -3305,12 +3466,6 @@ Download a file
 
 <TabbedSection>
 
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_download_file+code-samples\}
-
-</SectionTitle>
-
 <SectionTab
   slot="tab"
   id="operation-files_api_routes_download_file+code-samples+typescript"
@@ -3442,6 +3597,70 @@ description: My awesome description
 
 </OperationParametersSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-files_api_routes_download_file+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-files_api_routes_download_file+responses+200+application-octet-stream"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-files_api_routes_download_file+responses+200+application-octet-stream"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-files_api_routes_download_file+responses+200+application-octet-stream+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -3479,27 +3698,6 @@ description: My awesome description
 OK
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
@@ -3546,12 +3744,6 @@ description: My awesome description
 <OperationCodeSamplesSection slot="code-samples">
 
 <TabbedSection>
-
-<SectionTitle slot="title">
-
-### Code Samples \{#operation-files_api_routes_get_signed_url+code-samples\}
-
-</SectionTitle>
 
 <SectionTab
   slot="tab"
@@ -3712,6 +3904,70 @@ Number of hours before the url becomes invalid. Defaults to 24h
 
 </OperationParametersSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples \{#operation-files_api_routes_get_signed_url+responses\}
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-files_api_routes_get_signed_url+responses+200+application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-files_api_routes_get_signed_url+responses+200+application-json"
+>
+
+<OperationRequestBodyExamplesSection slot="request-body-examples">
+
+<Section>
+
+<SectionTitle slot="title">
+
+### Request Examples \{#operation-files_api_routes_get_signed_url+responses+200+application-json+request-examples\}
+
+</SectionTitle>
+
+<SectionContent slot="content">
+
+<DebugPlaceholder>
+
+No examples provided
+
+_OpenAPI example:_
+
+```
+content:
+  application/json:
+    examples:
+      example1:
+        value: { foo: 'bar'}
+```
+
+</DebugPlaceholder>
+
+</SectionContent>
+
+</Section>
+
+</OperationRequestBodyExamplesSection>
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -3741,27 +3997,6 @@ Number of hours before the url becomes invalid. Defaults to 24h
 OK
 
 </OperationResponseBodyDescriptionSection>
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-<DebugPlaceholder>
-
-No examples provided
-
-_OpenAPI example:_
-
-```
-requestBody:
-  content:
-    application/json:
-      examples:
-        example1:
-          value: {}
-```
-
-</DebugPlaceholder>
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
