--- a/examples/nextra/pokeapi/src/app/api/endpoint/pokemon/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/pokemon/page.mdx
@@ -7617,6 +7617,49 @@ This parameter can be a string or an integer.
 
 </OperationParametersSection>
 
+<OperationResponseBodyExamplesSection slot="response-body-examples">
+
+<TabbedSection>
+
+<SectionTitle slot="title">
+
+### Responses Examples [#operation-api_v2_pokemon_retrieve_responses]
+
+</SectionTitle>
+
+<SectionTab
+  slot="tab"
+  id="operation-api_v2_pokemon_retrieve_responses_200_application-json"
+>
+
+200
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-api_v2_pokemon_retrieve_responses_200_application-json"
+>
+
+```json
+{
+  "id": 1,
+  "name": "Rambo",
+  "base_experience": 64,
+  "height": 7,
+  "is_legendary": false,
+  "is_mythical": false,
+  "order": 1,
+  "weight": 60
+}
+```
+
+</SectionContent>
+
+</TabbedSection>
+
+</OperationResponseBodyExamplesSection>
+
 <OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
@@ -7640,25 +7683,6 @@ This parameter can be a string or an integer.
   slot="content"
   id="operation-api_v2_pokemon_retrieve_responses_200_application-json"
 >
-
-<OperationResponseBodyExamplesSection slot="response-body-examples">
-
-_Example:_
-
-```
-{
-  "id": 1,
-  "name": "Rambo",
-  "base_experience": 64,
-  "height": 7,
-  "is_legendary": false,
-  "is_mythical": false,
-  "order": 1,
-  "weight": 60
-}
-```
-
-</OperationResponseBodyExamplesSection>
 
 <ExpandableSection>
 
